Fix: Footer links alignment

--- a/src/components/footer/_footer.scss
+++ b/src/components/footer/_footer.scss
@@ -20,4 +20,7 @@
   .footer__main {
     flex-direction: column;
   }
+  .footer__links {
+    align-items: center;
+  }
 }
